# ChangeLog for sys-kernel/mm-sources
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/ChangeLog,v 1.280 2006/06/04 15:05:03 voxus Exp $

*mm-sources-2.6.17_rc5-r3 (04 Jun 2006)

  04 Jun 2006; Konstantin Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.17_rc5-r3.ebuild:
  Bump.

*mm-sources-2.6.17_rc5-r2 (01 Jun 2006)

  01 Jun 2006; Konstantin Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.17_rc5-r2.ebuild:
  Bump.

*mm-sources-2.6.17_rc5-r1 (30 May 2006)

  30 May 2006; Konstantin Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.17_rc5-r1.ebuild:
  Bump.

  19 May 2006; Daniel Drake <dsd@gentoo.org> metadata.xml:
  Move to kernel herd

*mm-sources-2.6.17_rc4-r1 (16 May 2006)

  16 May 2006; Konstantin Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.17_rc4-r1.ebuild:
  Bump.

*mm-sources-2.6.17_rc3-r1 (03 May 2006)

  03 May 2006; Konstantin Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.17_rc3-r1.ebuild:
  Bump.

*mm-sources-2.6.17_rc2-r1 (27 Apr 2006)

  27 Apr 2006; Konstantin Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.17_rc2-r1.ebuild:
  Bump.

*mm-sources-2.6.17_rc1-r2 (08 Apr 2006)

  08 Apr 2006; Konstantin Arkhipov <voxus@gentoo.org>
  -mm-sources-2.6.16-r1.ebuild, -mm-sources-2.6.16-r2.ebuild,
  -mm-sources-2.6.16_rc1-r1.ebuild, -mm-sources-2.6.16_rc1-r2.ebuild,
  -mm-sources-2.6.16_rc1-r3.ebuild, -mm-sources-2.6.16_rc1-r4.ebuild,
  -mm-sources-2.6.16_rc1-r5.ebuild, -mm-sources-2.6.16_rc2-r1.ebuild,
  -mm-sources-2.6.16_rc3-r1.ebuild, -mm-sources-2.6.16_rc4-r1.ebuild,
  -mm-sources-2.6.16_rc4-r2.ebuild, -mm-sources-2.6.16_rc5-r1.ebuild,
  -mm-sources-2.6.16_rc5-r2.ebuild, -mm-sources-2.6.16_rc5-r3.ebuild,
  -mm-sources-2.6.16_rc6-r1.ebuild, -mm-sources-2.6.16_rc6-r2.ebuild,
  +mm-sources-2.6.17_rc1-r2.ebuild:
  Bump and cleanup.

*mm-sources-2.6.17_rc1-r1 (05 Apr 2006)

  05 Apr 2006; Konstantin Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.17_rc1-r1.ebuild:
  Bump.
