@@ -9,12 +9,14 @@ DIST 2.6.17-rc4-mm1.bz2 3250628 RMD160 c579baccc7e8fcb90564753f5784a3ecd5a0c342 
 DIST 2.6.17-rc5-mm1.bz2 4120442 RMD160 de3db7f4b0bfd7816e6759350611d7041a8081b7 SHA1 c8389fac0c7652d2f44f6ed6420e459c674871ae SHA256 af517e749b2fed80f5842aaa0cdfea0834c388f8169e83332c233dd48618d61a
 DIST 2.6.17-rc5-mm2.bz2 4316195 RMD160 61e4b21f756df9d624198941fb26e8392d384e13 SHA1 65cdfb4489b9346da78a2dc139f616c39c86181f SHA256 999ee4afc364af3c66934abbf23bb4296f834277a6c86bc98b808921a66a099a
 DIST 2.6.17-rc5-mm3.bz2 4391917 RMD160 4670de319e6f9def93959e55ad9c6dc9d7635fa2 SHA1 08dc4aed1e1186aaae8779728d480813c6659ab9 SHA256 e7d58ec772f272eb5c9ed9cb9b10d4c2688fc34b1d58cb23a3ffa35132c39a6c
+DIST 2.6.17-rc6-mm1.bz2 4395065 RMD160 57b51439228e95845607f91a099afaff68656052 SHA1 d0fb81ffd365aad859625f925efa8de33558543f SHA256 5224b9ae6bf9800fb616aee9f994c00401e4f70b4054e5b531f081f5331cc2d1
 DIST linux-2.6.16.tar.bz2 40845005 RMD160 af5c2f55733fadd2fdf8b00da55e7b31d516d4e8 SHA1 bef21cd5063a648f33a99a26f4742dd05eb4dca2 SHA256 1200dcc7e60fcdaf68618dba991917a47e41e67099e8b22143976ec972e2cad7
 DIST patch-2.6.17-rc1.bz2 5149219 RMD160 d2268861f97ff57ea1c261de6601336f643f7213 SHA1 fba0c539ff2b93192e4b7c93310f68761d4cd372 SHA256 df0675cd27e562851c9d3bc9663cefaf989a65d6393517b4508942e0889e8b8e
 DIST patch-2.6.17-rc2.bz2 5664144 RMD160 7342e4beb7e2bb90f43238cb39731c798237b2ee SHA1 eba0723fa2f8023013f0373c12eeb35f522e05b1 SHA256 c6d69c3ad58b2a3d405d77c989ce7a54af9447aa78c13b97c80c294fa218e00e
 DIST patch-2.6.17-rc3.bz2 5776935 RMD160 0ddebe4f5094cceb37bcf080cd464e4283f75ba6 SHA1 4de87023b5fd8c26cdc9ebbad35cc81c97c870d6 SHA256 e7e4510e212e5d4a96e54249886ee53f615fa0d07389cc5144bcd783fcb77cb5
 DIST patch-2.6.17-rc4.bz2 5852145 RMD160 0105148ec8a10b9314da4569538f0473f8d0bdbb SHA1 6a2d90001810d50a09624f7373d320d4e0dd57a5 SHA256 68bc52ceb1100c3dc687aef09da3dade31fca2af6ea9d7a1466d321cd34727de
 DIST patch-2.6.17-rc5.bz2 5955136 RMD160 655ea05b5b3efb1c4e93e7084217b2b22d3f13ea SHA1 8f6465b399922f8d865461a1f40a51d95ecba593 SHA256 900c4a4afd790add537ae257843af78a0768e8ddd2f2a3d1e1e067c2370cdcf2
+DIST patch-2.6.17-rc6.bz2 6024528 RMD160 dbc1006f0a6ff188fa63af11bcaf06f3652c3896 SHA1 98fbcdfc6a14e15391e7c999882716a132b6fd07 SHA256 819489f01387e664af0fed983fe31e11acb2792bd9f9fc6264c36b6b21c2ee4e
 EBUILD mm-sources-2.6.17_rc1-r1.ebuild 1010 RMD160 c520329fb8617dee12d719936afb1604b824257a SHA1 6febe59b03445d92ea72949fea407c177fb9f08a SHA256 45fd34e84d493b8bcf8761c80af55ca51bf2464801127cf342602c81eb0d9fed
 MD5 933793e87676775495187be31c41b30f mm-sources-2.6.17_rc1-r1.ebuild 1010
 RMD160 c520329fb8617dee12d719936afb1604b824257a mm-sources-2.6.17_rc1-r1.ebuild 1010
@@ -47,10 +49,14 @@ EBUILD mm-sources-2.6.17_rc5-r3.ebuild 1010 RMD160 c98bba80bea74b5a3e2e08a5b5192
 MD5 b08286452e132877f945ee7345bad75b mm-sources-2.6.17_rc5-r3.ebuild 1010
 RMD160 c98bba80bea74b5a3e2e08a5b5192a57cd81ac7e mm-sources-2.6.17_rc5-r3.ebuild 1010
 SHA256 6c4d6b9ee9c5e7846d5c635749c865a5ea1aa5d9dcc18b4dc82faa5749591795 mm-sources-2.6.17_rc5-r3.ebuild 1010
-MISC ChangeLog 50031 RMD160 a37ae89283fd458ab4172edcb4edcbed56c488e8 SHA1 90880b2657d28b8743c406c3e09dba6a01de95f2 SHA256 8b649b0c0e266dc3a59a8c0b2855fd545a57c1fa66774ea01456b36b3610262e
-MD5 ea7f50fbe2d78ab8cf7b1b9a59414305 ChangeLog 50031
-RMD160 a37ae89283fd458ab4172edcb4edcbed56c488e8 ChangeLog 50031
-SHA256 8b649b0c0e266dc3a59a8c0b2855fd545a57c1fa66774ea01456b36b3610262e ChangeLog 50031
+EBUILD mm-sources-2.6.17_rc6-r1.ebuild 1010 RMD160 93316ee1a76a42a979df181b90eae0dc7a17bf92 SHA1 a1cb7f76d6d6dd3499b9ffd892383a8269f1b919 SHA256 f62d88d77671020cfd1cd28ae3dc8d22c1ce18e34e0b3ca96014ca86bcceb180
+MD5 86d1a87a35f753ac21b9101ec7658ec9 mm-sources-2.6.17_rc6-r1.ebuild 1010
+RMD160 93316ee1a76a42a979df181b90eae0dc7a17bf92 mm-sources-2.6.17_rc6-r1.ebuild 1010
+SHA256 f62d88d77671020cfd1cd28ae3dc8d22c1ce18e34e0b3ca96014ca86bcceb180 mm-sources-2.6.17_rc6-r1.ebuild 1010
+MISC ChangeLog 50171 RMD160 38e3ee9d216de711c32156b823c362eb279c2d70 SHA1 1e9840530a4ffa610fd92149c7b74480ac121590 SHA256 7dd86f46fd9d699aae79b14f6b2ca71e540e31ed0be1c63889975128734fb3fc
+MD5 ea57e396b14a3f01b6733249fba02a77 ChangeLog 50171
+RMD160 38e3ee9d216de711c32156b823c362eb279c2d70 ChangeLog 50171
+SHA256 7dd86f46fd9d699aae79b14f6b2ca71e540e31ed0be1c63889975128734fb3fc ChangeLog 50171
 MISC metadata.xml 347 RMD160 eaec97a8e4bc77ded782df66b716f994cfb0e28f SHA1 f345b45876722311cb30542c9750ce868db6cb1f SHA256 a2ce49990bcca8c8c08eb63474e2436eddf5419dd4d221a2ae478eadaf4a0d42
 MD5 a3c720ef7dd7203ae0f0a101e3e724a4 metadata.xml 347
 RMD160 eaec97a8e4bc77ded782df66b716f994cfb0e28f metadata.xml 347
@@ -79,10 +85,13 @@ SHA256 d5ce77ebbf4d984bef03e80b60ff339e4c05a6011098294ddef0ac84610ba951 files/di
 MD5 d27de4e6b50c5967c88cbc75580b2e60 files/digest-mm-sources-2.6.17_rc5-r3 729
 RMD160 d4e9b92598bdadb7de5c72c931244b0087db0596 files/digest-mm-sources-2.6.17_rc5-r3 729
 SHA256 8e67f008387b9307dc0fbd6d93b3a6de2a187ec7a0b6fa2a2f3ec7c41436acee files/digest-mm-sources-2.6.17_rc5-r3 729
+MD5 ca66da55e676ab194cb074c552bebf60 files/digest-mm-sources-2.6.17_rc6-r1 729
+RMD160 33d1bc0dc480d0e38252f50ec9bf745f3f3f4a97 files/digest-mm-sources-2.6.17_rc6-r1 729
+SHA256 edad6d7ff6448a50197dc232984557128ae0a1d41d0b0eaa2f22f68e32568907 files/digest-mm-sources-2.6.17_rc6-r1 729
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.3 (GNU/Linux)
 
-iD8DBQFEgvatbwxeDFj+ScoRAt/uAKCSvYRYXKEp+tt9BOzqQ3H5VT8uCACfTEnp
-ayzIVubNLBgKUxvQsv5ug6g=
-=xyJm
+iD8DBQFEiGv3bwxeDFj+ScoRArdrAJ9hxci/9TrMo2G3Co5lRcf/4sAs7gCgmzSZ
+CUyBDz+fyv+xIGTectb/85M=
+=h7K3
 -----END PGP SIGNATURE-----
