@@ -1,0 +1,9 @@
+MD5 6d9ba8007624e4c9902aa0b8bd40838a 2.6.17-rc6-mm1.bz2 4395065
+RMD160 57b51439228e95845607f91a099afaff68656052 2.6.17-rc6-mm1.bz2 4395065
+SHA256 5224b9ae6bf9800fb616aee9f994c00401e4f70b4054e5b531f081f5331cc2d1 2.6.17-rc6-mm1.bz2 4395065
+MD5 9a91b2719949ff0856b40bc467fd47be linux-2.6.16.tar.bz2 40845005
+RMD160 af5c2f55733fadd2fdf8b00da55e7b31d516d4e8 linux-2.6.16.tar.bz2 40845005
+SHA256 1200dcc7e60fcdaf68618dba991917a47e41e67099e8b22143976ec972e2cad7 linux-2.6.16.tar.bz2 40845005
+MD5 e9e67a364bdc5d52e0fe22a222bf675e patch-2.6.17-rc6.bz2 6024528
+RMD160 dbc1006f0a6ff188fa63af11bcaf06f3652c3896 patch-2.6.17-rc6.bz2 6024528
+SHA256 819489f01387e664af0fed983fe31e11acb2792bd9f9fc6264c36b6b21c2ee4e patch-2.6.17-rc6.bz2 6024528
