@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/mm-sources
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/ChangeLog,v 1.280 2006/06/04 15:05:03 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/ChangeLog,v 1.281 2006/06/08 18:26:48 voxus Exp $
+
+*mm-sources-2.6.17_rc6-r1 (08 Jun 2006)
+
+  08 Jun 2006; Konstantin Arkhipov <voxus@gentoo.org>
+  +mm-sources-2.6.17_rc6-r1.ebuild:
+  Bump.
 
 *mm-sources-2.6.17_rc5-r3 (04 Jun 2006)
 
